Remove unused codes, made onTeleport method can detect tempban now.